Migrate ExperimentEnrollmentManagerTest to JUnit 5